[project]
name = "yuppbridge"
version = "0.1.0"
description = "OpenAI-compatible API bridge to Yupp AI (yupp.ai)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "YuppBridge Contributors"}
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "cloudscraper>=1.2.58",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpbin>=2.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
